--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,13 +19,13 @@
       {% for node in pages_list %}
         {% if node.title != null %}
           {% if node.layout == "page" %}
-            <a class="sidebar-nav-item{% if page.url contains node.url %} active{% endif %}" href="{{ site.baseurl }}{{ node.url }}">{{ node.title }}</a>
+            <a class="sidebar-nav-item{% if page.url contains node.url %}{% if node.url != '/' or page.url == node.url %} active{% endif %}{% endif %}" href="{{ site.baseurl }}{{ node.url }}">{{ node.title }}</a>
           {% endif %}
         {% endif %}
       {% endfor %}
 
       {% if site.has_blog %}
-        <a class="sidebar-nav-item{% if page.url contains site.blog_url %} active{% endif %}" href="{{ site.baseurl }}{{ site.blog_url }}">Blog</a>
+        <a class="sidebar-nav-item{% if page.url contains site.blog_url %}{% if node.url != '/' or page.url == node.url %} active{% endif %}{% endif %}" href="{{ site.baseurl }}{{ site.blog_url }}">Blog</a>
       {% endif %}
     </nav>
   </div>
